--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -2,17 +2,18 @@ name: Пример непрерывной интеграции
 on: [push]
 jobs:
   test-build:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-    - uses: actions/checkout@v3
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Setup
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: pip install django
-    - name: Testing
-      run: python manage.py test
+      - name: Install dependencies
+        run: pip install django
+
+      - name: Testing
+        run: python manage.py test
